added designs + new pages

--- a/app/assets/stylesheets/grams.scss
+++ b/app/assets/stylesheets/grams.scss
@@ -29,3 +29,10 @@
 #life{
   padding-top: 15px;
 }
+
+#mvp_button{
+  text-align: center;
+}
+
+@import "font-awesome-sprockets";
+@import "font-awesome";
