--- a/app/assets/stylesheets/landingpage.css.erb
+++ b/app/assets/stylesheets/landingpage.css.erb
@@ -12,7 +12,7 @@ html {
 }
 
 body{
-    background: url(<%= asset_path 'friend2.png' %>) no-repeat fixed center ;
+    background: url(<%= asset_path 'bg.png' %>) no-repeat fixed center ;
 }
 
 body,
