--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,21 +1,29 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">IG MVP</a>
-        <% if current_user %>
-          <p class="navbar-text navbarleft"> <%= link_to "Sign Out", logout_path %></p>
-        <% else %>
-          <p class="navbar-text navbar-left"> <%= link_to "Sign in", login_path %> </p>
-        <% end %>
-
+      <!-- <a class="navbar-brand" href="#">IG MVP</a> -->
+      <%= link_to "IG MVP", home_path, class: "navbar-brand" %>
     </div>
 
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+      <ul class="nav navbar-nav">
+        <!-- <li class="active"><a href="#">Link1 <span class="sr-only">(current)</span></a></li> -->
+        <li> <%= link_to "About", about_path %></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
+          <li> <%= link_to "Sign Out", logout_path %></li>
+          <% else %>
+          <li> <%= link_to "Sign In", login_path %></li>
+        <% end %>
+      </ul>
+    </div>
   </div>
 </nav>
