added blurb to friends page

--- a/app/views/grams/friends.html.erb
+++ b/app/views/grams/friends.html.erb
@@ -1,8 +1,7 @@
 <p>
-  <% if current_user %>
-    <%#= current_user.name %>
-    <%#= image_tag (current_user.image) %>
-  <% end %>
+<div class="well well-sm">
+  Your MVP is based on your last 15 photos.
+</div>
 </p>
 <% @count = 1 %>
 <% @all = [] %>
