added about blurb

--- a/app/views/grams/about.html.erb
+++ b/app/views/grams/about.html.erb
@@ -1,5 +1,14 @@
 <h2>About</h2>
 <p>Fun application built to have fun with Instagram API.</p>
+
+<p>
+  <ul>
+    <li> I'm Rory</li>
+    <li> <a href="http://rorywalker.com/">Blog</a> </li>
+    <li>Twitter - <a href="http://twitter.com/redrory">@redrory</a> </li>
+  </ul>
+</p>
+
 <p>Currently it only show you, your top 5 MVP.</p>
 Next features:
 <ol>
