--- a/app/views/layouts/lp.html.erb
+++ b/app/views/layouts/lp.html.erb
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>IG MVP</title>
+    <title>StripperGram</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <!-- Bootstrap Core CSS -->
@@ -40,8 +40,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>IG MVP</h1>
-                        <h3>Find your Instagram MVP</h3>
+                        <h1>StripperGram</h1>
+                        <h3>The Clubs where it's poppin'</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
