--- a/app/views/grams/about.html.erb
+++ b/app/views/grams/about.html.erb
@@ -1,5 +1,5 @@
 <h2>About</h2>
-<p>Fun application built to have fun with Instagram API.</p>
+<p>Another application built to have fun with Instagram API.</p>
 
 <p>
   <ul>
@@ -9,9 +9,8 @@
   </ul>
 </p>
 
-<p>Currently it only show you, your top 5 MVP.</p>
+<p>Currently show the top ranks photo at your favorite strip clubs.</p>
 Next features:
 <ol>
-  <li>Male/Female MVPs</li>
-  <li>Location mapping</li>
+  <li>Coming soon</li>
 </ol>
