--- a/app/views/grams/mvp.html.erb
+++ b/app/views/grams/mvp.html.erb
@@ -5,13 +5,13 @@
     <%= current_user.name %>
   <% end %>
   <blockquote>
-  <p>Show me your friends and I’ll show you your Instagram MVP</p>
-  <small>Rory <cite title="Source Title">IG MVP</cite></small>
+  <p>Find the stripclubs that are already poppin!</p>
+  <small>Rory <cite title="Source Title">StripperGram</cite></small>
 </blockquote>
 </p>
 
 <div id="mvp_button">
-<%= link_to 'Find your MVPs', friends_path, class: "btn btn-success btn-lg",:data => { :disable_with => "<i class='fa fa-spinner fa-spin'></i> Processing..." } %>
+<%= link_to 'Taboo Strip Club', photos_path, class: "btn btn-success btn-lg",:data => { :disable_with => "<i class='fa fa-spinner fa-spin'></i> Processing..." } %>
 
 </div>
 
